name:                pe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/incertia/projecteuler-haskell
license:             BSD3
license-file:        LICENSE
author:              Will Song <incertia@incertia.net>
maintainer:          Will Song <incertia@incertia.net>
copyright:           2017 Will Song
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
  other-modules:       PE001, PE002, PE003, PE004, PE005
                     , PE006, PE007, PE008, PE009, PE010
                     , PE012, PE013, PE014, PE015
                     , PE016, PE018, PE020
                     , PE021, PE022, PE023, PE025
                     , PE048
                     , PE067
  build-depends:       base >= 4.7 && < 5
                     , primes
                     , data-memocombinators
  default-language:    Haskell2010

executable pe
  hs-source-dirs:      pe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/incertia/projecteuler-haskell
