name:                pe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/incertia/projecteuler-haskell
license:             BSD3
license-file:        LICENSE
author:              Will Song <incertia@incertia.net>
maintainer:          Will Song <incertia@incertia.net>
copyright:           2017 Will Song
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver, Common
  other-modules:       PE001, PE002, PE003, PE004, PE005
                     , PE006, PE007, PE008, PE009, PE010
                     , PE011, PE012, PE013, PE014, PE015
                     , PE016, PE017, PE018, PE019, PE020
                     , PE021, PE022, PE023, PE024, PE025
                     , PE026, PE027, PE028, PE029, PE030
                     , PE031, PE032, PE034, PE035
                     , PE036, PE037, PE038, PE039, PE040
                     , PE041, PE042, PE043, PE045
                     , PE046, PE047, PE048, PE050
                     , PE052, PE053, PE055
                     , PE056, PE057, PE058
                     , PE062, PE063, PE064, PE065
                     , PE066, PE067, PE069, PE070
                     , PE072
                     , PE079
                     , PE092
                     , PE097, PE099
  build-depends:       arithmoi
                     , array
                     , base >= 4.7 && < 5
                     , containers
                     , data-memocombinators
                     , unordered-containers
  ghc-options:         -O2
  default-language:    Haskell2010

executable pe
  hs-source-dirs:      pe
  main-is:             Main.hs
  build-depends:       base
                     , pe
                     , time
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/incertia/projecteuler-haskell
